--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -41,7 +41,13 @@ ga_tracking_anonymize_ip: true
 remote_theme: pmarsceill/just-the-docs
 plugins:
   - jekyll-feed
+  - jekyll-relative-links
 
+
+relative_links:
+  enabled: true
+  collections: false
+  
 # Exclude from processing.
 # The following items will not be processed, by default.
 # Any item listed under the `exclude:` key here will be automatically added to
